# traffic-emission-monitor-edge

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  app_gui.py  bootstrap.py  config.json  diagnose_hailo_mps.py  docker-compose.yml  git_flow.md  launch.sh  main.py  plan.txt  requirements.txt  test_hailo_mps.py
app/: alignment_daemon.py  bootstrap.py  monitor_engine.py
domain/physics/: alignment_engine.py  brake_emission_model.py  kinematics_smoother.py  opmode_calculator.py  opmode_mapper.py  spatial_analyzer.py  tire_emission_model.py  vsp_calculator.py
domain/vehicle/: classifier.py  physical_filter.py  repository.py
infra/concurrency/: async_recognizer.py  plate_worker.py  shared_memory_pool.py
infra/config/: loader.py  storage_manager.py
infra/deploy/: host_config_template.txt  receiver.cpp  setup_host.sh  transmitter.cpp
infra/store/: queries.sql  schema.sql  sqlite_manager.py  storage_manager.py
infra/sys/: process_optimizer.py  sys_monitor.py
infra/time/: ntp_sync.py
perception/: daemon.py  gst_pipeline.py  kinematics_estimator.py  vision_pipeline.py
perception/math/: geometry.py  undistorter.py
perception/plate_classifier/: pipeline.py  setup.py
perception/plate_classifier/core/: classification.py  hailo_support.py  multitask_detect.py
perception/plate_classifier/cpp_extension/: CMakeLists.txt
perception/plate_classifier/cpp_extension/include/: plate_recognizer.hpp
perception/plate_classifier/cpp_extension/src/: bindings.cpp  plate_recognizer.cpp
perception/plate_classifier/models/: litemodel.hef  y5fu.hef
perception/sensor/: thermal_camera.py  weather_station.py
perception/sensor/hailo_bridge/: CMakeLists.txt  libhailo_bridge.cpp
perception/sensor/mlx90640_driver/: CMakeLists.txt  Makefile  py_wrapper.cpp
perception/sensor/mlx90640_driver/Include/mlx90640-driver/: MLX90640_I2C_Driver.h
perception/sensor/mlx90640_driver/Source/mlx90640-driver/: MLX90640_LINUX_I2C_Driver.cpp
perception/sensor/weather_driver/: CMakeLists.txt  libweather.cpp
plugins/dewarp/: CMakeLists.txt  gstdewarpfilter.cpp  gstdewarpfilter.h  meson.build
resources/: camera_calib_6mm.npz  camera_calib_6mm.yml  npz_to_bin.py
ui/: calibration_window.py  console_reporter.py  renderer.py
ui/components/: calibration_canvas.py  edge_dialog.py  speed_curve.py  video_canvas.py
ui/controllers/: main_controller.py
ui/views/: main_window.py
ui/workers/: engine_worker.py
